# supervisor

./: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
swarm_supervisor/: __init__.py  cli.py  config.py  depgraph.py  display.py  generator.py  mcp_server.py  memory.py  planner.py  preflight.py  researcher.py  tasks.py  verifier.py
tests/: test_cli.py  test_depgraph.py  test_integration.py  test_researcher.py  test_tasks.py  test_verifier.py
